fix: Prevent weird breaks in button-text

--- a/src/app/components/search-input/search-input.component.scss
+++ b/src/app/components/search-input/search-input.component.scss
@@ -19,7 +19,7 @@ form {
     flex: 1 1 80%;
   }
   button[type='submit'] {
-    flex: 0 0 20%;
+    flex: 0 0 auto;
   }
 }
 
